static elements on landing page complete with styling

--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -1,80 +1,65 @@
-/* --------------------------------------------------------------------------------
-Grid
--------------------------------------------------------------------------------- */
-
-.grid {
+.container{
+  height: 100vh;
   display: flex;
-  flex: 0 1 auto;
-  /* defaults to 'row' */
-  flex-direction: row;
-  flex-wrap: wrap;
-  /* defaults to 'flex-start' */
-  justify-content: flex-start;
-  align-items: flex-start;
+  justify-content: center;
+  align-items: center;  
+  background-repeat: no-repeat;
+  background-size: cover;
+
 }
 
-.grid-col {
-  flex: 0 0 auto;
-  padding: 0 0.5rem 0.5rem;
-  box-sizing: border-box;
+.landingPage_image{
+  display: flex;
+  justify-content: center;
+  align-items: left;
+  height: 600px;
+  width: 95%;
+  margin: 0 auto;
+  flex-direction: column;
 }
 
-.grid-col_1 {
-  flex-basis: 8.33333333%;
-  max-width: 8.33333333%;
+.comment p{
+  color: white;
+  font-weight: bold;
 }
 
-.grid-col_2 {
-  flex-basis: 16.66666667%;
-  max-width: 16.66666667%;
+.comment{
+  background-color: black;
+  opacity: 0.5;
+  padding: 20px 10px;
+  border-radius: 25px;
+  width: max-content;
+  height: max-content;
+  margin-bottom: 50px;
 }
 
-.grid-col_3 {
-  flex-basis: 25%;
-  max-width: 25%;
+.hero_buttons{
+  display: flex;
+  gap: 30px;
 }
 
-.grid-col_4 {
-  flex-basis: 33.33333333%;
-  max-width: 33.33333333%;
+.hero_button{
+  text-decoration: none;
 }
 
-.grid-col_5 {
-  flex-basis: 41.66666667%;
-  max-width: 41.66666667%;
+.register{
+  background-color: #1C9EB2;
+  height: 50px;
+  width: 150px;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
 }
 
-.grid-col_6 {
-  flex-basis: 50%;
-  max-width: 50%;
-}
-
-.grid-col_7 {
-  flex-basis: 58.33333333%;
-  max-width: 58.33333333%;
-}
-
-.grid-col_8 {
-  flex-basis: 66.66666667%;
-  max-width: 66.66666667%;
-}
-
-.grid-col_9 {
-  flex-basis: 75%;
-  max-width: 75%;
-}
-
-.grid-col_10 {
-  flex-basis: 83.33333333%;
-  max-width: 83.33333333%;
-}
-
-.grid-col_11 {
-  flex-basis: 91.66666667%;
-  max-width: 91.66666667%;
-}
-
-.grid-col_12 {
-  flex-basis: 100%;
-  max-width: 100%;
+.login{
+  border: 1px solid #28E2FF;
+  height: 50px;
+  width: 150px;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
 }
