--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -5,8 +5,8 @@ body,
 }
 
 body {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  margin: 0px;
+font-family: 'Roboto', sans-serif;  margin: 0px;
+  background-color: #040404;
 }
 
 img {
@@ -109,4 +109,34 @@ Form Treatment
 input {
   margin: 5px;
   margin-bottom: 10px;
+}
+
+header{
+  display: flex;
+  justify-content: space-between;
+  position: absolute;
+  top: 20px;
+  left: 50px;
+  right: 50px;
+}
+
+.topLinks{
+  display: flex;
+  gap: 15px;
+}
+
+.logo{
+  font-size: 2rem;
+  font-weight: 700;
+  color: white;
+}
+
+a{
+  color: white;
+  font-weight: 600;
+  font-size: 18px;
+}
+
+.active{
+  color: #28E2FF;
 }
