--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -31,11 +31,13 @@
   width: max-content;
   height: max-content;
   margin-bottom: 50px;
+  margin-left: 750px;
 }
 
 .hero_buttons{
   display: flex;
   gap: 30px;
+  margin-left: 800px;
 }
 
 .hero_button{
