--- a/src/components/DriverPage/DriverPage.css
+++ b/src/components/DriverPage/DriverPage.css
@@ -4,6 +4,7 @@
     margin-top: 100px;
     width: max-content;
     gap: 50px;
+    position: relative;
 }
 
 .driver_info{
@@ -105,4 +106,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.update_button{
+    position: absolute;
+    bottom: -100px;
+    left: 50%;
+    transform: translateX(-50%);
 }
