--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -8,46 +8,61 @@
 
 }
 
+.overlay{
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.8);
+  z-index: 10;
+}
+
 .landingPage_image{
   display: flex;
   justify-content: center;
-  align-items: left;
+  align-items: center;
   height: 600px;
   width: 95%;
-  margin: 0 auto;
+  /* margin: 0 auto; */
   flex-direction: column;
+  position: relative;
+  z-index: 20;
 }
 
-.comment p{
+.comment h1{
   color: white;
   font-weight: bold;
 }
 
 .comment{
-  background-color: black;
-  opacity: 0.5;
   padding: 20px 10px;
   border-radius: 25px;
   width: max-content;
   height: max-content;
   margin-bottom: 50px;
-  margin-left: 750px;
 }
 
 .hero_buttons{
   display: flex;
   gap: 30px;
-  margin-left: 800px;
 }
 
-.hero_button{
-  text-decoration: none;
+.hero_button, button{
+  text-decoration: none; 
+  transition: all ease-in 0.3s;
+}
+
+button:hover{
+  transform: scale(1.05);
 }
 
 .register{
   background-color: #1C9EB2;
-  height: 50px;
-  width: 150px;
+  height: 45px;
+  width: 175px;
   font-weight: bold;
   display: flex;
   justify-content: center;
@@ -55,10 +70,15 @@
   border-radius: 20px;
 }
 
+.register:hover{
+  color:  white !important;
+
+}
+
 .login{
   border: 1px solid #28E2FF;
-  height: 50px;
-  width: 150px;
+  height: 45px;
+  width: 175px;
   font-weight: bold;
   display: flex;
   justify-content: center;
