--- a/src/components/Onboarding/Onboarding.css
+++ b/src/components/Onboarding/Onboarding.css
@@ -3,7 +3,7 @@
     padding: 30px;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 80px;
     max-width: 800px;
     margin: 0 auto;
     margin-top: 100px;
@@ -36,6 +36,15 @@
 
 }
 
-.dashboard_input::placeholder{
+.dashboard_input:placeholder{
     color: #404040 !important;
+
 }
+
+.action_buttons{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+
+}
+
