--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -16,12 +16,12 @@
     display: flex;
     width: 100%;
     height: 50px;
-
+    justify-content: space-between;
 }
 
 .tabs span{
     height: 100%;
-    width: 50%;
+    width: 49.5%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -37,12 +37,15 @@
 .inactiveTab{
     background-color: transparent;
     color: #1C9EB2;
+    border: 1px solid #cccccc;
 }
 
 table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
     width: 100%;
+    border: 1px solid #cccccc;
+    margin-top: 20px;
   }
   
   td, th {
@@ -50,10 +53,11 @@ table {
     padding: 8px;
     border-radius: 10px;
     padding-left: 10px;
+
   }
 
   .table_button_view{
-    padding: 7px 30px;
+    padding: 5px 20px;
     border-radius: 8px;
     background-color: transparent;
     color: #1C9EB2;
@@ -64,7 +68,7 @@ table {
   }
   
   .table_button_delete{
-    padding: 7px 30px;
+    padding: 5px 20px;
     border-radius: 8px;
     background-color: rgb(210, 35, 35);
     color: white;
@@ -73,3 +77,6 @@ table {
     border: 0;
   }
   
+  tr, thead{
+    border-bottom: 1px solid #cccccc;
+  }
