--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -5,8 +5,9 @@ body,
 }
 
 body {
-font-family: 'Roboto', sans-serif;  margin: 0px;
-  background-color: white;
+  font-family: 'Montserrat', sans-serif;  background-color: white;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 img {
@@ -121,6 +122,8 @@ header{
   right: 50px;
   z-index: 20;
   align-items: center;
+  width: auto;
+  margin: 0 auto;
 }
 
 .topLinks{
@@ -187,7 +190,6 @@ a:hover{
 
 .image_logo{
   border-radius: 50%;
-
 }
 
 .signout{
